--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -2,56 +2,70 @@
   box-sizing: border-box;
 }
 
+html {
+  display: flex;
+  justify-content: center;
+}
+
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  justify-content: space-between;
+  inline-size: 100%;
+  min-block-size: 100vh;
+  padding: 1.5rem;
   margin: 0;
-  padding: 2rem;
   font-family: $font-family-sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
-}
-
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-}
-
-.uoc-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
-
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
+  color: white;
+  background-color: rgb(0 0 0 / .5);
+  background-image: url("../images/santa-cruz-de-tenerife.avif");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: color;
+  @media screen and (min-width: 769px) {
+    inline-size: 90%;
+  }
+  @media screen and (min-width: 1280px) {
+    inline-size: 80%;
   }
 }
 
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
-
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
+.header {
+  position: relative;
+  display: flex;
+  .header__house-icon {
+    position: absolute;
+    inset-block-start: 50%;
+    font-size: scale(8px, 4);
+    line-height: 0;
+  }
+  .header__title {
+    padding-inline-start: 3rem;
+    margin-block: 1rem;
+    font-family: $header-font-family;
+    font-size: scale(8px, 5);
   }
 }
 
-.uoc-footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
+.home {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  .home__text {
+    line-height: 1.5rem;
+  }
+  .home__image {
+    text-align: center;
+    border-radius: .5rem;
+  }
+}
+
+.footer {
+  padding-block: 2rem;
+  font-size: scale(8px, 1.5);
   text-align: center;
 }
